Feat link between pages

--- a/Dashboard/dashboard.html
+++ b/Dashboard/dashboard.html
@@ -58,7 +58,7 @@
 
       <div class="optionsLeftSide">
         <div class="rowLeftSide">
-          <a class="optionsLeft" href="#">
+          <a class="optionsLeft" href="dashboard.html">
             <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M6.4 16V10.3529H9.6V16H13.6V8.47059H16L8 0L0 8.47059H2.4V16H6.4Z" fill="black" />
             </svg>
@@ -103,7 +103,7 @@
         </div>
 
         <div class="rowLeftSide">
-          <a class="optionsLeft" href="#">
+          <a class="optionsLeft" href="perfis.html">
             <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M5.99996 6.00002C7.47329 6.00002 8.66663 4.80669 8.66663 3.33335C8.66663 1.86002 7.47329 0.666687 5.99996 0.666687C4.52663 0.666687 3.33329 1.86002 3.33329 3.33335C3.33329 4.80669 4.52663 6.00002 5.99996 6.00002ZM5.99996 7.33335C4.21996 7.33335 0.666626 8.22669 0.666626 10V11.3334H11.3333V10C11.3333 8.22669 7.77996 7.33335 5.99996 7.33335Z" fill="black"/>
             </svg>              
