Feat responsive screens

--- a/Dashboard/perfis.html
+++ b/Dashboard/perfis.html
@@ -131,7 +131,8 @@
                             RPG.
                         </p>
                         <p class="nick">
-                            Nick:<a href="javascript:void(0)" onclick="abrirModal()" class="nickName">Bad Luck For You</a>
+                            Nick:<a href="javascript:void(0)" onclick="abrirModal()" class="nickName">Bad Luck For
+                                You</a>
                         </p>
                     </div>
                     <div class="imgPart">
@@ -160,26 +161,36 @@
         </section>
     </main>
     <div id="modal">
-        <div id="modalContent">
-          <div class="leftModal">
-            <h1 id="tituloDescricao">Bruno Pitta</h1>
-            <p>Desenvolvedor Front End Pleno, atualmente trabalhando na VX Case, além de trabalhar como monitor no curso da cubos academy em parceria com o ifood. Atualmente estudando Next. Não menos importante, mas ama bastante dark souls e é jogador de mago em qualquer RPG.
-                <br><br>Estou habituado com html, css e javascript, além de ter experiência em projetos com angular, vue e React, apesar de ter clara preferência pelo último, devido a isso que decidi escolher o next.
-                <br><br>Possuo pouco mais de 2 anos de experiência e não estou aberto a novas propostas de trabalho no momento! <br></p>
-            <a href="javascript:void(0)" id="closeModal" onclick="fecharModal()">Sair</a>
-          </div>
-          <div class="rightModal">
-              <h2 id="tituloFavAtv">Atividades favoritas:</h2>
-              <div class="imgFavAtv">
-                  <img class="imgatv1" src="img/lol.png" alt="Imagem de LOL">
-                  <img class="imgatv2" src="img/yugioh.png" alt="Imagem de Yugi-Oh">
-                  <img class="imgatv3" src="img/darksouls.png" alt="Imagem de Dark Souls">
-                  <img class="imgatv4" src="img/pokemon.png" alt="Imagem de Pockemon">
-              </div>
-          </div> 
+        <div id="modalBox">
+            <div id="modalContent">
+                <div class="leftModal">
+                    <h1 id="tituloDescricao">Bruno Pitta</h1>
+                    <p>Desenvolvedor Front End Pleno, atualmente trabalhando na VX Case, além de trabalhar como monitor
+                        no curso da cubos academy em parceria com o ifood. Atualmente estudando Next. Não menos
+                        importante, mas ama bastante dark souls e é jogador de mago em qualquer RPG.
+                        <br><br>Estou habituado com html, css e javascript, além de ter experiência em projetos com
+                        angular, vue e React, apesar de ter clara preferência pelo último, devido a isso que decidi
+                        escolher o next.
+                        <br><br>Possuo pouco mais de 2 anos de experiência e não estou aberto a novas propostas de
+                        trabalho no momento! <br>
+                    </p>
+                </div>
+                <div class="rightModal">
+                    <h2 id="tituloFavAtv">Atividades favoritas:</h2>
+                    <div class="imgFavAtv">
+                        <img class="imgatv1" src="img/lol.png" alt="Imagem de LOL">
+                        <img class="imgatv2" src="img/yugioh.png" alt="Imagem de Yugi-Oh">
+                        <img class="imgatv3" src="img/darksouls.png" alt="Imagem de Dark Souls">
+                        <img class="imgatv4" src="img/pokemon.png" alt="Imagem de Pockemon">
+                    </div>
+                </div>
+            </div>
+            <div class="botaoFechar" onclick="fecharModal()">
+                <a href="javascript:void(0)" id="closeModal">Sair</a>
+            </div>
         </div>
-      </div>
+    </div>
 </body>
-<script src="js/dashboard.js"></script>
+<script src="js/perfis.js"></script>
 
 </html>
